@@ -4,6 +4,7 @@ master
   Threads will now be updated instantly after posting through the QR.
   Your own posts will not count toward the unread count after posting through the QR.
   QR thumbnails of high-res pictures will not slow down anymore.
+  Reply navigation keybinds will now scroll as you navigate.
 - noface
   Add unique ID to filter.
 
